# forgottenserver

./: .gitignore  CMakeLists.txt
data/lib/core/: player.lua
data/monster/: monsters.xml
data/monster/monsters/: animated_ogre_shaman.xml  arachir_the_ancient_one.xml  bazir.xml  black_vixen.xml  blue_djinn.xml  captain_jones.xml  charged_energy_elemental.xml  dark_apprentice.xml  efreet.xml  ekatrix.xml  evil_sheep_lord.xml  fahim_the_wise.xml  fernfang.xml  feroxa_killable_werewolf.xml  feroxa_werewolf.xml  ghoulish_hyaena.xml  green_djinn.xml  hacker.xml  herald_of_gloom.xml  ice_dragon.xml  incredibly_old_witch.xml  king_zelos.xml  kreebosh_the_exile.xml  marid.xml  merikh_the_slaughterer.xml  mutated_rat.xml  nightstalker.xml  orc_cult_priest.xml  orc_cultist.xml  priestess.xml  primitive.xml  rift_fragment.xml  shadowpelt.xml  son_of_verminor.xml  spirit_of_fire.xml  the_halloween_hare.xml  the_lord_of_the_lice.xml  the_ruthless_herald.xml  ugly_monster.xml  vampire_viscount.xml  (+2 more)
data/scripts/lib/: register_monster_type.lua
data/world/: Peronium1.otbm
db_utils/: make_player_god.sql  new_account.sql  new_player.sql
include/: CMakeLists.txt
include/constants/: const.h  definitions.h  enums.h
include/libs/item/: ClientIdToServerIdMap.h  Item.h  ItemAttrSerializer.h  ItemAttributes.h  ItemFactory.h  ItemType.h  Items.h  ReflectAttribute.h  itemenums.h  itemmaps.h  itemutils.h
include/libs/map/: IOMap.h  iomapenums.h
src/: CMakeLists.txt  account.h  actions.cpp  actions.h  ban.cpp  baseevents.cpp  bed.cpp  bed.h  chat.cpp  chat.h  combat.cpp  combat.h  condition.cpp  condition.h  configmanager.cpp  configmanager.h  container.cpp  container.h  creature.cpp  creature.h  creatureevent.cpp  creatureevent.h  cylinder.h  database.h  depotchest.cpp  depotlocker.cpp  depotlocker.h  events.cpp  events.h  game.cpp  game.h  globalevent.cpp  groups.cpp  house.cpp  house.h  housetile.cpp  inbox.cpp  iologindata.cpp  iomap.cpp  iomap.h  (+57 more)
test/: CMakeLists.txt
test/unit/: creature_team_test.cpp
(+59 files in other folders)
